--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 
 <!-------------------------------------------------------------------------------------->
   		</div>
+	<a href="https://labibliateca.github.io/main/"><mark>PAGINA PRINCIPAL</mark>
 <script>
      function leerEnVozAlta() {
     // Obtener el texto del elemento con la clase "contenido-texto"
