--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 </i></p>
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
 	 El hombre es incapaz de salvarse. NO ES IGUAL A :  <b>Total depravación </b><br>
-	<b>La predestinación doble</b> (para perderse o salvarse ) / 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
+	<b>La predestinación doble</b> (para perderse o salvarse ) NOCIERRA CON: 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
 	<b>Libre Albedrío</b> / El hombre tiene capacidad para decidir pero no es totalmente libre ( Si el hijo os libertare ... Jua 8: 36 )<br>
 	... Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
