--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
 <!-------------------------------------------------------------------------------------->
 <h3>¿La Elección de Dios o la nuestra?</h3>
 <p><i>Agustín (354 y 430 d.C),<span style="font-size:14px;">provenía de la filosofía, arrastró 
-su tendencia  :maniqueísmo : religión dualista que dividía el mundo en fuerzas del bien y del mal,
+su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fuerzas del bien y del mal,
 bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministerial (le permitía dar la Cena del Señor)
  (¿un presbítero sin iglesia?).Volvió a Hipona (Annaba, Argelia), fundó una comunidad monástica (vida comunitaria aislada ).</i><br>
-Él como otros tantos se dedicó armar postulados para definir la FE cristiana. Desde el siglo II hasta nuestros
-días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
+Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
+	que busquemos las explicaciones a través de "atajos" ,( como el de Predestinación y Gracia Irresistible y otras )que deberían 
+	ser mas bien conducidas por los axiomas (principios) y límites de las Escrituras .<br>
+	Desde el siglo II hasta nuestros días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
 <p> <b>No hay nada peor que enunciar postulados para reemplazar principios bíblicos , desplazando la lectura directa de las Escrituras.</b></p>
 	<h5>UNA LISTA DE POSTULADOS:<br>
 	*Justino Mártir (c. 100 - 165 d.C.) : aceptación parcial religiones previas.<br>
