--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministerial (le permitía dar la Cena del Señor)
  (¿un presbítero sin iglesia?).Volvió a Hipona (Annaba, Argelia), fundó una comunidad monástica (vida comunitaria aislada ).</i><br>
 Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
-	que busquemos las explicaciones a través de "atajos" ,( como el de Predestinación y Gracia Irresistible y otras )que deberían 
+	que busquemos las explicaciones a través de "atajos", (como la dualidad Predestinación / Gracia Irresistible vs Libre Albedrío ) que deberían 
 	ser mas bien conducidas por los axiomas (principios) y límites de las Escrituras .<br>
 	Desde el siglo II hasta nuestros días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
 <p> <b>No hay nada peor que enunciar postulados para reemplazar principios bíblicos , desplazando la lectura directa de las Escrituras.</b></p>
@@ -71,9 +71,9 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 <i>Piensen por un minuto ¿No sería mejor indagar en las Escrituras, plantear conclusiones (NO postulados)?
 </i></p>
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
-	 El hombre es incapaz de salvarse. NO ES IGUAL A :  <b>Total depravación </b><br>
-	<b>La predestinación doble</b> (para perderse o salvarse ) NOCIERRA CON: 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
-	<b>Libre Albedrío</b> / El hombre tiene capacidad para decidir pero no es totalmente libre ( Si el hijo os libertare ... Jua 8: 36 )<br>
+	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
+	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
+	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare ... Jua 8: 36 )<br>
 	... Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
 <p><b>El tema de Rom 9,10 y 11.</b><br></p>
