--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministerial (le permitía dar la Cena del Señor)
  (¿un presbítero sin iglesia?).Volvió a Hipona (Annaba, Argelia), fundó una comunidad monástica (vida comunitaria aislada ).</i><br>
 Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
-	que busquemos las explicaciones a través de "atajos", (como la dualidad Predestinación / Gracia Irresistible vs Libre Albedrío ) que deberían 
+	que busquemos las explicaciones a través de "<b>ATAJOS</b>", (como la dualidad Predestinación / Gracia Irresistible vs Libre Albedrío ) que deberían 
 	ser mas bien conducidas por los axiomas (principios) y límites de las Escrituras .<br>
 	Desde el siglo II hasta nuestros días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
 <p> <b>No hay nada peor que enunciar postulados para reemplazar principios bíblicos , desplazando la lectura directa de las Escrituras.</b></p>
