--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
   	<p>Aún mas dificil de entender que Dios engrandeció su nombre endureciendo a Faraón, pero  tuvo "paciencia" con él. <br>
 	¡E igual es a un número de judíos y gentiles preparados de antemano para gloria!</p>
 	<p><b>Todas las afirmaciones que hemos hecho rompen la línea de causa y efecto (humano).</b><br>
-	<u>¿Qué, el designio de los tiempos estaría en manos humanas?</u></p>
+	<u>¿Acaso el designio de los tiempos debería estar en manos humanas?</u></p>
 	<p>Vimos 3 capítulos que muestran que los designios de Dios son inalterables desde siempre.<br>
 	¿Cómo Dios trata con el hombre ?; la dificultad para conectar ambas ELECCIONES es un problema humano.<br><br>
 
