--- a/index.html
+++ b/index.html
@@ -52,20 +52,20 @@ bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministeri
 	ser mas bien conducidas por los axiomas (principios) y límites de las Escrituras .<br>
 	Desde el siglo II hasta nuestros días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
 <p> <b>No hay nada peor que enunciar postulados para reemplazar principios bíblicos , desplazando la lectura directa de las Escrituras.</b></p>
-	<h5>UNA LISTA DE POSTULADOS:<br>
-	*Justino Mártir (c. 100 - 165 d.C.) : aceptación parcial religiones previas.<br>
-	*Tertuliano (c. 155 - 240 d.C.) : "Creo porque es absurdo".<br>
-	*Orígenes de Alejandría (c. 184 - 253 d.C.) : "almas condenadas serán restauradas" .<br>
-	*Cipriano de Cartago (c. 200 - 258 d.C.) : "fuera de la iglesia no hay salvación".<br>
-	*Cirilo de Alejandría(431 d.C.): Theotokos- María dió a luz a "Dios"<br>
-	*Eutiques: (451 d.C.): Cristo una naturaleza<br>
-	*Leon de Roma (451 d.C.):Cristo dos naturalezas<br>
-	*Carlos el Calvo. siglo VI:Filioque "Espiritu Santo viene del Hijo y del Padre"<br>
-	*Pascasio Radberto siglo XII: "transubstanciación"<br>
-	*Juan Calvino (1509 - 1564) como Agustín :"elección incondicional -perversión total".<br>
-	*Jacobo Arminio (1560-1609):"elección condicional y el libre albedrío".<br>
+	<h4>UNA LISTA DE POSTULADOS:<br>
+	Justino Mártir (c. 100 - 165 d.C.) : aceptación parcial religiones previas.<br>
+	Tertuliano (c. 155 - 240 d.C.) : "Creo porque es absurdo".<br>
+	Orígenes de Alejandría (c. 184 - 253 d.C.) : "almas condenadas serán restauradas" .<br>
+	Cipriano de Cartago (c. 200 - 258 d.C.) : "fuera de la iglesia no hay salvación".<br>
+	Cirilo de Alejandría(431 d.C.): Theotokos- María dió a luz a "Dios"<br>
+	Eutiques: (451 d.C.): Cristo una naturaleza<br>
+	Leon de Roma (451 d.C.):Cristo dos naturalezas<br>
+	Carlos el Calvo. siglo VI:Filioque "Espiritu Santo viene del Hijo y del Padre"<br>
+	Pascasio Radberto siglo XII: "transubstanciación"<br>
+	Juan Calvino (1509 - 1564) como Agustín :"elección incondicional -perversión total".<br>
+	Jacobo Arminio (1560-1609):"elección condicional y el libre albedrío".<br>
 	
-	"EMPECEMOS POR LA BIBLIA"</h5>
+	"EMPECEMOS POR LA BIBLIA"</h4>
 <p> <i>Postulados o Principios Bíblicos</i><br>
 Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση [haeresis como herejía]) denominacionales .
 <i>Piensen por un minuto ¿No sería mejor indagar en las Escrituras, plantear conclusiones (NO postulados)?
@@ -73,8 +73,8 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
 	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
 	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
-	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare ... Jua 8: 36 )<br>
-	... Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
+	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare . Jua 8: 36 )<br>
+	Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
 <p><b>El tema de Rom 9,10 y 11.</b><br></p>
 	<p><span style="font-size:14px;">
