--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	<p><b>Todas las afirmaciones que hemos hecho rompen la línea de causa y efecto (humano).</b><br>
 	<u>¿Acaso el designio de los tiempos debería estar en manos humanas?</u></p>
 	<p>Vimos 3 capítulos que muestran que los designios de Dios son inalterables desde siempre.<br>
-	¿Cómo Dios trata con el hombre ?; la dificultad para conectar ambas ELECCIONES es un problema humano.<br><br>
+	¿Cómo Dios trata con el hombre ?; la dificultad para conectar ambas ELECCIONES es un problema de la mente humana.<br><br>
 
 	<img src="conector.jpg" class="imagen2"/>
 		
