--- a/index.html
+++ b/index.html
@@ -44,12 +44,18 @@
 <!-------------------------------------------------------------------------------------->
 <h3>¿La Elección de Dios o la nuestra?</h3>
 <p><i>Agustín (354 y 430 d.C),<span style="font-size:14px;">provenía de la filosofía, arrastró 
-su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fuerzas del bien y del mal,
-bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministerial (le permitía dar la Cena del Señor)
- (¿un presbítero sin iglesia?).Volvió a Hipona (Annaba, Argelia), fundó una comunidad monástica (vida comunitaria aislada ).</i><br>
-Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
-	que busquemos las explicaciones a través de "<b>ATAJOS</b>", (como la dualidad Predestinación / Gracia Irresistible vs Libre Albedrío ) que deberían 
-	ser mas bien conducidas por los axiomas (principios) y límites de las Escrituras .<br>
+su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fuerzas del bien y del mal<br>
+	Lo bautiza  Ambrosio de Milán ,nombrado presbítero en Hipona (Annaba, Argelia) por el Obispo Valerio, "aclamado por la comunidad ".</i> <br>
+	La biografía es rescatada de Hagiografías (notas sobre los santos no consideradas  fiables totalmente),.<br>
+	 Según ésta ,  Fundó una comunidad monástica (vida comunitaria aislada ).
+	<br><b>Lo que es extraño que después de nombrado publicamente , se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?<br>
+	Sus obras fueron copiadas por órdenes monásticas(ejemplo :Suiza).<br>
+	Muchas de sus obras se consideran de un alto contenido filosófico.<br><br>
+	Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
+	que busquemos las explicaciones a través de "<b>ATAJOS</b>":<br>
+	"Algunos elegidos para salvación (No sistemática o doble predestinación como el Calvinismo)<br>
+	.            "Gracia irresistible" , "Corrupción total (No depravación como el Calvinismo)".<br>
+	Enunciados  que deberían ser mas bien conducidos por los axiomas (principios) y límites de las Escrituras .<br>
 	Desde el siglo II hasta nuestros días hemos tenido que cargar con CONCEPTOS que pocas veces tienen fuente bíblica.</span></p>
 <p> <b>No hay nada peor que enunciar postulados para reemplazar principios bíblicos , desplazando la lectura directa de las Escrituras.</b></p>
 	<h4>UNA LISTA DE POSTULADOS:<br>
@@ -57,11 +63,11 @@ bautizado por Ambrosio de Milán ,nombrado presbítero por un sistema  ministeri
 	Tertuliano (c. 155 - 240 d.C.) : "Creo porque es absurdo".<br>
 	Orígenes de Alejandría (c. 184 - 253 d.C.) : "almas condenadas serán restauradas" .<br>
 	Cipriano de Cartago (c. 200 - 258 d.C.) : "fuera de la iglesia no hay salvación".<br>
-	Cirilo de Alejandría(431 d.C.): Theotokos- María dió a luz a "Dios"<br>
-	Eutiques: (451 d.C.): Cristo una naturaleza<br>
-	Leon de Roma (451 d.C.):Cristo dos naturalezas<br>
-	Carlos el Calvo. siglo VI:Filioque "Espiritu Santo viene del Hijo y del Padre"<br>
-	Pascasio Radberto siglo XII: "transubstanciación"<br>
+	Cirilo de Alejandría(431 d.C.): Theotokos- María dió a luz a "Dios".<br>
+	Eutiques: (451 d.C.): Cristo una naturaleza.<br>
+	Leon de Roma (451 d.C.):Cristo dos naturalezas.<br>
+	Carlos el Calvo. siglo VI:Filioque "Espiritu Santo viene del Hijo y del Padre".<br>
+	Pascasio Radberto siglo XII: "transubstanciación".<br>
 	Juan Calvino (1509 - 1564) como Agustín :"elección incondicional -perversión total".<br>
 	Jacobo Arminio (1560-1609):"elección condicional y el libre albedrío".<br>
 	
@@ -72,8 +78,8 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 </i></p>
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
 	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
-	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Ti 2: 4  el cual quiere que todos los hombres sean salvos.. .<br>
-	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare . Jua 8: 36 )<br>
+	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Timoteo 2:.4  el cuál quiere que todos los hombres sean salvos.. .<br>
+	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 )<br>
 	Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
 <p><b>El tema de Rom 9,10 y 11.</b><br></p>
