--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</style>
 </head>
 <body>
-		<button onclick="leerEnVozAlta()">Presionar para Leer en Voz Alta</button>
+		<button onclick="leerEnVozAlta()"><b>Presionar para Leer en Voz Alta</b></button>
 <div class="contenido">
 	
 
