--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</style>
 </head>
 <body>
-		<button onclick="leerEnVozAlta()"><span style="font-size:40px;"><b>Presionar para Leer en Voz Alta</b></span></button>
+		<button onclick="leerEnVozAlta()"><span style="font-size:25px;"><b>Tocar para ESCUCHAR en Voz Alta</b></span></button>
 <div class="contenido">
 	
 
