--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <h3>¿La Elección de Dios o la nuestra?</h3>
 <p><i>Agustín (354 y 430 d.C),<span style="font-size:14px;">provenía de la filosofía, arrastró 
 su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fuerzas del bien y del mal<br>
-	Lo bautiza  Ambrosio de Milán ,nombrado presbítero en Hipona (Annaba, Argelia) por el Obispo Valerio, "aclamado por la comunidad ".</i> <br>
+	Lo bautiza  Ambrosio de Milán ,nombrado presbítero en Hipona (Annaba, Argelia) por el Obispo Valerio, <b>"aclamado por la comunidad "</b>.</i> <br>
 	La biografía es rescatada de Hagiografías (notas sobre los santos no consideradas  fiables totalmente),.<br>
 	 Según ésta ,  Fundó una comunidad monástica (vida comunitaria aislada ).
 	<br><b>Lo que es extraño que después de nombrado publicamente , se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?<br>
