--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 	Lo bautiza  Ambrosio de Milán ,nombrado presbítero en Hipona (Annaba, Argelia) por el Obispo Valerio, <b>"aclamado por la comunidad "</b>.</i> <br>
 	La biografía es rescatada de Hagiografías (notas sobre los santos no consideradas  fiables totalmente),.<br>
 	 Según ésta ,  Fundó una comunidad monástica (vida comunitaria aislada ).
-	<br><b>Lo que es extraño que después de nombrado publicamente , se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?<br>
+	<br><b>Lo que es extraño que después de nombrado publicamente, se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?<br>
 	Sus obras fueron copiadas por órdenes monásticas(ejemplo :Suiza).<br>
-	Muchas de sus obras se consideran de un alto contenido filosófico.<br><br>
+	<b>Muchas de sus obras se consideran de un alto contenido filosófico.</b><br><br>
 	Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
 	que busquemos las explicaciones a través de "<b>ATAJOS</b>":<br>
 	"Algunos elegidos para salvación (No sistemática o doble predestinación como el Calvinismo)<br>
