--- a/index.html
+++ b/index.html
@@ -82,21 +82,22 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 )<br>
 	Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
-<p><b>El tema de Rom 9,10 y 11.</b><br></p>
+<p><b>El tema de Romanos 9,10 y 11.</b><br></p>
 	<p><span style="font-size:14px;">
-	<b>Vemos que si saltamos de Rom 8: 39 a 12: 1 no se nota,¿serán los 3 capítulos como una interpolación?.</b><br>
+	<b>Vemos que si saltamos de Rom 8:.39 a 12: 1 no se nota,¿serán los 3 capítulos como una interpolación?.</b><br>
 	No hay registros de que cap 9,10 y 11 hayan sido agregados ,no hay manuscritos donde estos falten y de no estar se perdería mucha información.</span><br>
 	<b><i>¿Que hace tan especial a estos tres capítulos?</i></b><br>
 	LA ELECCIÓN DE DIOS<br><br>
 		
 	 Dios es infalible en sus planes, no libra a voluntad humana el rumbo de los tiempos. <br>
-	...En cuanto a Israel (Rom 9: 6) [Lit] "No es como si la <i>palabra de Dios hubiera fallado,:</i><br>
+	...En cuanto a Israel (Romanos 9:.6) [Lit] "No es como si la <i>palabra de Dios hubiera fallado,:</i><br>
 	En Isaac te será llamada descendencia. ..he aquí la declaración: ... Sara tendrá un hijo . <br>
-	Rom9: 10 ... Rebeca, habiendo concebido de un solo hombre, Isaac nuestro padre ( dos niños) que aún antes de nacer (Dios)
+	Romanos9:. 10 ... Rebeca, habiendo concebido de un solo hombre, Isaac nuestro padre ( dos niños) que aún antes de nacer (Dios)
 	dijo "el mayor servirá al menor",para que el designio persista por la <b>elección (ἐκλογή eklogué ) de Dios</b> , 
 	no por la obra sino por el llamado , como está escrito [recién en Malaquias]: a Jacob amé y a Esaú aborreci <p>
-	<h4>RV60: (pues no habían aún nacido, ni habían hecho aún ni bien ni mal, para que el propósito de Dios conforme a la elección permaneciese, no por las obras sino por el que llama), 
-	Rom 9: 12  se le dijo: El mayor servirá al menor.</h4>
+	<h4>RV60: (pues no habían aún nacido, ni habían hecho aún ni bien ni mal, para que el propósito de Dios conforme a la elección permaneciese, 
+		no por las obras sino por el que llama), 
+	Romanos 9:.12  se le dijo: El mayor servirá al menor.</h4>
 	<p><b><i>La pregunta es: ¿Hay injusticia en  Dios? (porque no actúa en consecuencia del obrar humano sino de su designio)  </i></b></p>
   	<p>Aún mas dificil de entender que Dios engrandeció su nombre endureciendo a Faraón, pero  tuvo "paciencia" con él. <br>
 	¡E igual es a un número de judíos y gentiles preparados de antemano para gloria!</p>
@@ -109,12 +110,12 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 		
 	<u><b>¿Cómo  Dios llama a que se vuelvan a Él?</u></b><br>
 	LA ELECCIÓN DEL HOMBRE<br>
-	1Ts 1: 4  Porque conocemos, hermanos amados de Dios, <b>vuestra elección</b>; <br>
-	2Pe 1: 10  Por lo cual, hermanos, tanto más procurad hacer firme(<i>hacer estable</i>) vuestra vocación(κλῆσις-klesis) :
+	1Tesalonisences 1: 4  Porque conocemos, hermanos amados de Dios, <b>vuestra elección</b>; <br>
+	2Pedro 1: 10  Por lo cual, hermanos, tanto más procurad hacer firme(<i>hacer estable</i>) vuestra vocación(κλῆσις-klesis) :
 	llamado y <b>elección (ἐκλογή eklogué )</b><br>
 	EL ANUNCIO;<br>
 	<i>Salvos de la ira de Dios --- Salvos por la gracia de Dios</i><br>
-	Hch 13: 38  Sabed, pues, esto, varones hermanos: que por medio de él(Jesús) se os anuncia perdón de pecados<br>
+	Hechos 13: 38  Sabed, pues, esto, varones hermanos: que por medio de él(Jesús) se os anuncia perdón de pecados<br>
 	ENVIA EMISARIOS QUE RUEGAN;<br>
 	 <i>como si Dios rogase por medio de nosotros; os rogamos en nombre de Cristo: Reconciliaos con Dios. </i><br>
 
