--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	En Isaac te será llamada descendencia. ..he aquí la declaración: ... Sara tendrá un hijo . <br>
 	Romanos9:. 10 ... Rebeca, habiendo concebido de un solo hombre, Isaac nuestro padre ( dos niños) que aún antes de nacer (Dios)
 	dijo "el mayor servirá al menor",para que el designio persista por la <b>elección (ἐκλογή eklogué ) de Dios</b> , 
-	no por la obra sino por el llamado , como está escrito [recién en Malaquias]: a Jacob amé y a Esaú aborreci <p>
+	no por la obra sino por el llamado , como está escrito [recién en Malaquias]: a Jacob amé y a Esaú aborreci.<p>
 	<h4>RV60: (pues no habían aún nacido, ni habían hecho aún ni bien ni mal, para que el propósito de Dios conforme a la elección permaneciese, 
 		no por las obras sino por el que llama), 
 	Romanos 9:.12  se le dijo: El mayor servirá al menor.</h4>
