--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 	Leon de Roma (451 d.C.):Cristo dos naturalezas.<br>
 	Carlos el Calvo. siglo VI:Filioque "Espiritu Santo viene del Hijo y del Padre".<br>
 	Pascasio Radberto siglo XII: "transubstanciación".<br>
-	Juan Calvino (1509 - 1564) como Agustín :"elección incondicional -perversión total".<br>
+	Juan Calvino (1509 - 1564)  :"elección incondicional -perversión total".<br>
 	Jacobo Arminio (1560-1609):"elección condicional y el libre albedrío".<br>
 	
 	"EMPECEMOS POR LA BIBLIA"</h4>
