--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 	Lo bautiza  Ambrosio de Milán ,nombrado presbítero en Hipona (Annaba, Argelia) por el Obispo Valerio, <b>"aclamado por la comunidad "</b>.</i> <br>
 	La biografía es rescatada de Hagiografías (notas sobre los santos no consideradas  fiables totalmente),.<br>
 	 Según ésta ,  Fundó una comunidad monástica (vida comunitaria aislada ).
-	<br><b>Lo que es extraño que después de nombrado publicamente, se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?<br>
+	<br><b>Lo que es extraño que después de nombrado publicamente, se aisle en forma solitaria</b>, entonces ¿sobre qué comunidad ejerció?.<br>
 	Sus obras fueron copiadas por órdenes monásticas(ejemplo :Suiza).<br>
 	<b>Muchas de sus obras se consideran de un alto contenido filosófico.</b><br><br>
 	Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
@@ -82,10 +82,10 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 )<br>
 	Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
-<p><b>El tema de Romanos 9,10 y 11.</b><br></p>
+<p><b>El tema de Romanos 9, 10 y 11.</b><br></p>
 	<p><span style="font-size:14px;">
-	<b>Vemos que si saltamos de Rom 8:.39 a 12: 1 no se nota,¿serán los 3 capítulos como una interpolación?.</b><br>
-	No hay registros de que cap 9,10 y 11 hayan sido agregados ,no hay manuscritos donde estos falten y de no estar se perdería mucha información.</span><br>
+	<b>Vemos que si saltamos de Romanos 8:.39 a 12:.1 no se nota,¿serán los 3 capítulos como una interpolación?.</b><br>
+	No hay registros de que capítulos 9,10 y 11 hayan sido agregados ,no hay manuscritos donde estos falten y de no estar se perdería mucha información.</span><br>
 	<b><i>¿Que hace tan especial a estos tres capítulos?</i></b><br>
 	LA ELECCIÓN DE DIOS<br><br>
 		
@@ -98,11 +98,11 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	<h4>RV60: (pues no habían aún nacido, ni habían hecho aún ni bien ni mal, para que el propósito de Dios conforme a la elección permaneciese, 
 		no por las obras sino por el que llama), 
 	Romanos 9:.12  se le dijo: El mayor servirá al menor.</h4>
-	<p><b><i>La pregunta es: ¿Hay injusticia en  Dios? (porque no actúa en consecuencia del obrar humano sino de su designio)  </i></b></p>
+	<p><b><i>La pregunta es: ¿Hay injusticia en  Dios? (porque no actúa en consecuencia del obrar humano sino de su designio).  </i></b></p>
   	<p>Aún mas dificil de entender que Dios engrandeció su nombre endureciendo a Faraón, pero  tuvo "paciencia" con él. <br>
-	¡E igual es a un número de judíos y gentiles preparados de antemano para gloria!</p>
+	¡E igual es a : un número de judíos y gentiles preparados de antemano para gloria!.</p>
 	<p><b>Todas las afirmaciones que hemos hecho rompen la línea de causa y efecto (humano).</b><br>
-	<u>¿Acaso el designio de los tiempos debería estar en manos humanas?</u></p>
+	<u>¿Acaso el designio de los tiempos debería estar en manos humanas?.</u></p>
 	<p>Vimos 3 capítulos que muestran que los designios de Dios son inalterables desde siempre.<br>
 	¿Cómo Dios trata con el hombre ?; la dificultad para conectar ambas ELECCIONES es un problema de la mente humana.<br><br>
 
@@ -114,15 +114,15 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	2Pedro 1: 10  Por lo cual, hermanos, tanto más procurad hacer firme(<i>hacer estable</i>) vuestra vocación(κλῆσις-klesis) :
 	llamado y <b>elección (ἐκλογή eklogué )</b><br>
 	EL ANUNCIO;<br>
-	<i>Salvos de la ira de Dios --- Salvos por la gracia de Dios</i><br>
-	Hechos 13: 38  Sabed, pues, esto, varones hermanos: que por medio de él(Jesús) se os anuncia perdón de pecados<br>
+	<i>Salvos de la ira de Dios --- Salvos por la gracia de Dios.</i><br>
+	Hechos 13: 38  Sabed, pues, esto, varones hermanos: que por medio de él(Jesús) se os anuncia perdón de pecados.<br>
 	ENVIA EMISARIOS QUE RUEGAN;<br>
 	 <i>como si Dios rogase por medio de nosotros; os rogamos en nombre de Cristo: Reconciliaos con Dios. </i><br>
 
 	ROMANOS 9 HABLA DE LA VOLUNTAD INEXORABLE DE DIOS.. SIN EMBARGO:<br>
-	Rom 9: 30  ...Que los gentiles, que no iban tras la justicia, han alcanzado la justicia, 
-	es decir, la justicia que es por fe; mas Israel, que iba tras una ley de justicia, no la alcanzó.<b>[Si hay una razón, no hay imposición]</b> <br>
-	textual: ... que los gentiles los que no perseguían la justificación alcanzaron justificación que es de la fe<br>
+	Romanos 9: 30  ...Que los gentiles, que no iban tras la justicia, han alcanzado la justicia, 
+	es decir, la justicia que es por fe; mas Israel, que iba tras una ley de justicia, no la alcanzó.<b>[Si hay una razón, no hay imposición].</b> <br>
+	Iextual: ... que los gentiles los que no perseguían la justificación alcanzaron justificación que es de la fe.<br>
 	<i> τι ουν ερουμεν οτι εθνη τα μη διωκοντα δικαιοσυνην κατελαβεν δικαιοσυνην δικαιοσυνην δε την εκ πιστεως <br><br>
 	QUEDA PENDIENTE EL TEMA DE LA PREDESTINACIÓN.<br>
 	
@@ -151,7 +151,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
         var mensaje = new SpeechSynthesisUtterance(parte);
         mensaje.lang = 'es-ES';
         mensaje.pitch = 1;
-        mensaje.rate = 1;
+        mensaje.rate = .7;
         window.speechSynthesis.speak(mensaje);
     });
 }
