--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 	</style>
 </head>
 <body>
-		<button onclick="leerEnVozAlta()"><span style="font-size:22px;"><b>Tocar para ESCUCHAR en Voz Alta</b></span></button>
+		<button style="width: 200px; height: 70px;background-color: yellow;font-size: 25px;" onclick="leerEnVozAlta()"><b>Tocar para ESCUCHAR en Voz Alta</b></span></button>
 <div class="contenido">
 	
 
