--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 	Jacobo Arminio (1560-1609):"elección condicional y el libre albedrío".<br>
 	
 	"EMPECEMOS POR LA BIBLIA"</h4>
-<p> <i>Postulados o Principios Bíblicos</i><br>
+<p> <i>Postulados o Principios Bíblicos.</i><br>
 Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση [haeresis como herejía]) denominacionales .
-<i>Piensen por un minuto ¿No sería mejor indagar en las Escrituras, plantear conclusiones (NO postulados)?
+<i>Piensen por un minuto ¿No sería mejor indagar en las Escrituras, plantear conclusiones (NO postulados)?.
 </i></p>
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
 	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
@@ -144,7 +144,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
     var texto = document.querySelector('.contenido').innerText;
 
     // Dividir el texto en segmentos más pequeños
-    var partes = dividirTextoEnPartes(texto, 510); // Por ejemplo, 200 caracteres por parte
+    var partes = dividirTextoEnPartes(texto, 513); // Por ejemplo, 200 caracteres por parte
 
     // Leer cada parte secuencialmente
     partes.forEach((parte) => {
