--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 <h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
 	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
 	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Timoteo 2:.4  el cuál quiere que todos los hombres sean salvos.. .<br>
-	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 )<br>
-	Y así un sin fin ( ver para entender más <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
+	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 ).<br>
+	Y así un sin fin ( ver para entender más, <a href="https://guarduino.github.io/Doctrinas-y-Conceptos/"target="_blank">Doctrinas y Conceptos</a>
 </h5>	
 <p><b>El tema de Romanos 9, 10 y 11.</b><br></p>
 	<p><span style="font-size:14px;">
