--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση [haeresis como herejía]) denominacionales .
 <i>Piensen por un minuto ¿No sería mejor indagar en las Escrituras, plantear conclusiones (NO postulados)?.
 </i></p>
-<h5>POSTULADOS O TEORIAS QUE NO TIENEN APOYO BIBLICO:<br>
+<h5>POSTULADOS O TEORíAS QUE NO TIENEN APOYO BíBLICO:<br>
 	  "Total depravación" NO ES IGUAL A "El hombre es incapaz de salvarse"Hechos 4:.12.  <br>
 	La predestinación doble (para perderse o salvarse ) NO CIERRA CON: 1 Timoteo 2:.4  el cuál quiere que todos los hombres sean salvos.. .<br>
 	"Libre Albedrío" NO CIERRA CON "El hombre tiene capacidad para decidir"  Génesis 4:.7 pero esta bajo influencia ( Si el hijo os libertare, . Juan 8:. 36 ).<br>
@@ -90,7 +90,7 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 	LA ELECCIÓN DE DIOS<br><br>
 		
 	 Dios es infalible en sus planes, no libra a voluntad humana el rumbo de los tiempos. <br>
-	...En cuanto a Israel (Romanos 9:.6) [Lit] "No es como si la <i>palabra de Dios hubiera fallado,:</i><br>
+	En cuanto a Israel (Romanos 9:.6) [Literal] "No es como si la <i>palabra de Dios hubiera fallado,:</i><br>
 	En Isaac te será llamada descendencia. ..he aquí la declaración: ... Sara tendrá un hijo . <br>
 	Romanos9:. 10 ... Rebeca, habiendo concebido de un solo hombre, Isaac nuestro padre ( dos niños) que aún antes de nacer (Dios)
 	dijo "el mayor servirá al menor",para que el designio persista por la <b>elección (ἐκλογή eklogué ) de Dios</b> , 
@@ -110,19 +110,20 @@ Los"postulados" no fundamentados producen divisiones (sectarismos o αίρεση
 		
 	<u><b>¿Cómo  Dios llama a que se vuelvan a Él?</u></b><br>
 	LA ELECCIÓN DEL HOMBRE<br>
-	1Tesalonisences 1: 4  Porque conocemos, hermanos amados de Dios, <b>vuestra elección</b>; <br>
-	2Pedro 1: 10  Por lo cual, hermanos, tanto más procurad hacer firme(<i>hacer estable</i>) vuestra vocación(κλῆσις-klesis) :
-	llamado y <b>elección (ἐκλογή eklogué )</b><br>
+	1Tesalonisences 1:.4  Porque conocemos, hermanos amados de Dios, <b>vuestra elección</b>; <br>
+	2Pedro 1:.10  Por lo cual, hermanos, tanto más procurad hacer firme(<i>hacer estable</i>) vuestra vocación(en griego :κλῆσις-klesis) :
+	llamado y <b>elección (en griego:ἐκλογή eklogué )</b><br>
 	EL ANUNCIO;<br>
 	<i>Salvos de la ira de Dios --- Salvos por la gracia de Dios.</i><br>
 	Hechos 13: 38  Sabed, pues, esto, varones hermanos: que por medio de él(Jesús) se os anuncia perdón de pecados.<br>
-	ENVIA EMISARIOS QUE RUEGAN;<br>
+	ENVíA EMISARIOS QUE RUEGAN;<br>
 	 <i>como si Dios rogase por medio de nosotros; os rogamos en nombre de Cristo: Reconciliaos con Dios. </i><br>
 
 	ROMANOS 9 HABLA DE LA VOLUNTAD INEXORABLE DE DIOS.. SIN EMBARGO:<br>
-	Romanos 9: 30  ...Que los gentiles, que no iban tras la justicia, han alcanzado la justicia, 
+	Romanos 9:.30  ...Que los gentiles, que no iban tras la justicia, han alcanzado la justicia, 
 	es decir, la justicia que es por fe; mas Israel, que iba tras una ley de justicia, no la alcanzó.<b>[Si hay una razón, no hay imposición].</b> <br>
 	Iextual: ... que los gentiles los que no perseguían la justificación alcanzaron justificación que es de la fe.<br>
+	En griego:<br>
 	<i> τι ουν ερουμεν οτι εθνη τα μη διωκοντα δικαιοσυνην κατελαβεν δικαιοσυνην δικαιοσυνην δε την εκ πιστεως <br><br>
 	QUEDA PENDIENTE EL TEMA DE LA PREDESTINACIÓN.<br>
 	
