--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ su tendencia dualista proveniente del maniqueísmo, que dividía el mundo en fue
 	Sus obras fueron copiadas por órdenes monásticas(encontadas en :Suiza y otros).<br>
 	<b>Muchas de sus obras se consideran de un alto contenido filosófico.</b><br><br>
 	Él como otros tantos se dedicó armar enunciados para definir la FE cristiana ,muchos de los cuales hacen
-	que busquemos las explicaciones a través de "<b>ATAJOS</b>":<br>
+	que busquemos las explicaciones a través de "<b>ATAJOS</b>", ejemplos:<br>
 	"Algunos elegidos para salvación (No sistemática o doble predestinación como el Calvinismo)<br>
 	.            "Gracia irresistible" , "Corrupción total (No depravación como el Calvinismo)".<br>
 	Enunciados  que deberían ser mas bien conducidos por los axiomas (principios) y límites de las Escrituras .<br>
